tester/testsuite/bad/bad029.jl
int main() { 
    while(false) return 0;
}
